<resources>
    <string name="app_name">Ultimate Termofinger</string>
    <string name="str_bienvenido">Bienvenido</string>
    <string name="description_logo">Logo</string>
    <string name="str_get_data">Introducir datos</string>
    <string name="str_get_temperature">Toma de temperatura</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_name">Nombre</string>
    <string name="str_required">Requerido</string>
    <string name="hint_sesion">Número de sesión</string>
    <string name="hint_age">Edad</string>
    <string name="sex_masc">Masculino</string>
    <string name="sex_fem">Femenino</string>
    <string name="hint_sustancias">Café, tabaco, medicamento, etc.</string>
    <string name="str_sustancias">Sustancias proactivas</string>
    <string name="hint_date">01/06/2023</string>
    <string name="str_sex">Sexo</string>
    <string name="str_menstruacion">Fecha del último periodo menstrual</string>
    <string name="str_fever">¿Ha presentado fiebre en los ultimos días?</string>
    <string name="str_campo_vacio">Si no, dejar vacío</string>
    <string name="str_save">Guardar</string>
    <string name="str_add">Añadir nuevo</string>
    <string name="str_temp_collect">Iniciar muestreo</string>
    <string name="str_home">Inicio</string>
    <string name="str_timepicker">Hora del último alimento</string>
    <string name="hint_timepicker">09:00 am</string>
    <string name="str_no">No</string>
    <string name="str_yes">Si</string>
    <string name="hint_question_when">¿Cuando?</string>
    <string name="str_temperature">Toma de temperatura</string>
    <string name="str_start_time">Hora de inicio</string>
    <string name="str_duration">Duración de la prueba</string>
    <string name="str_sample">Muestreo</string>
    <string name="str_time2">10 segundos</string>
    <string name="str_time1">5 segundos</string>
    <string name="str_ok">OK</string>
    <string name="str_time_max_duration">Tiempo en minutos</string>
    <string name="str_remaining_time">Minutos restantes</string>
    <string name="str_time_zero">0</string>
</resources>